tdf#118375, tdf#70838 correct position of rotated shape in doc

Word relates the position to the unrotated shape in legacy doc
format. Writer uses the rotated shape. The patch corrects the
difference on import and export.

Reviewed-on: https://gerrit.libreoffice.org/70152
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>
(cherry picked from commit 421e6fc3cd2e6fe37afbef341e2d0ad7b8edde37)

Change-Id: I25537123656e62d6ffae5118ee8d621a4b5c5be0